<!--
  ~ Hewlett-Packard Company
  ~ All rights reserved.
  ~
  ~ This file, its contents, concepts, methods, behavior, and operation
  ~ (collectively the "Software") are protected by trade secret, patent,
  ~ and copyright laws. The use of the Software is governed by a license
  ~ agreement. Disclosure of the Software to third parties, in any form,
  ~ in whole or in part, is expressly prohibited except as authorized by
  ~ the license agreement.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.hp.mss.hpprint.activity.PrintServicePluginInformation"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/print_help_activity_title_bar_1"
        android:layout_width="match_parent"
        android:layout_height="38.33dp"
        android:layout_marginTop="36dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="38.33dp"
            android:layout_height="38.33dp"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:src="@drawable/ic_print_service_help_plugin_icon"
            android:scaleType="fitCenter"/>
        <TextView
            android:id="@+id/print_help_activity_title_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginRight="17dp"
            android:text="@string/print_help_activity_title_1"/>
    </LinearLayout>

    <TextView
        android:id="@+id/print_help_activity_msg_1_part_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="72.33dp"
        android:layout_marginRight="17dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/print_help_activity_title_bar_1"
        android:textSize="14sp"
        android:lineSpacingExtra="5sp"
        android:fontFamily="sans-serif"
        android:text="@string/print_help_activity_msg_1_part_1"/>

    <TextView
        android:id="@+id/print_help_activity_msg_1_part_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="72.33dp"
        android:layout_marginRight="17dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/print_help_activity_msg_1_part_1"
        android:textSize="14sp"
        android:lineSpacingExtra="5sp"
        android:fontFamily="sans-serif"
        android:text="@string/print_help_activity_msg_1_part_2"/>

    <TextView
        android:id="@+id/print_help_activity_msg_1_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="72.33dp"
        android:layout_marginRight="17dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/print_help_activity_msg_1_part_2"
        android:autoLink="web"
        android:textSize="14sp"
        android:textColor="@color/HPFontColorBlue"
        android:lineSpacingExtra="5sp"
        android:fontFamily="sans-serif"
        android:text="@string/print_help_activity_msg_1_link"/>

    <LinearLayout
        android:id="@+id/print_help_activity_title_bar_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_below="@id/print_help_activity_msg_1_link"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="38.33dp"
            android:layout_height="38.33dp"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:src="@drawable/ic_wifi_icon"
            android:scaleType="fitCenter"/>
        <TextView
            android:id="@+id/print_help_activity_title_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginRight="17dp"
            android:text="@string/print_help_activity_title_2"/>

    </LinearLayout>

    <TextView
        android:id="@+id/print_help_activity_msg_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="72.33dp"
        android:layout_marginRight="17dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/print_help_activity_title_bar_2"
        android:textSize="14sp"
        android:lineSpacingExtra="5sp"
        android:fontFamily="sans-serif"
        android:text="@string/print_help_activity_msg_2"/>

    <LinearLayout
        android:id="@+id/print_help_activity_title_bar_3"
        android:layout_width="match_parent"
        android:layout_height="38.33dp"
        android:layout_marginTop="36dp"
        android:layout_below="@id/print_help_activity_msg_2"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="38.33dp"
            android:layout_height="38.33dp"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:src="@drawable/ic_printer_error_icon"
            android:scaleType="fitCenter"/>
        <TextView
            android:id="@+id/print_service_help_title_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginRight="17dp"
            android:text="@string/print_help_activity_title_3"/>

    </LinearLayout>

    <TextView
        android:id="@+id/print_help_activity_msg_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="72.33dp"
        android:layout_marginRight="17dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:layout_below="@id/print_help_activity_title_bar_3"
        android:textSize="14sp"
        android:lineSpacingExtra="5sp"
        android:fontFamily="sans-serif"
        android:text="@string/print_help_activity_msg_3"/>

</RelativeLayout>
</ScrollView>