<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hp.mss.hpprint.activity.PrintPreview">

    <com.hp.mss.hpprint.view.PagePreviewView
        android:id="@+id/preview_image_view"
        android:layout_width="match_parent"
        android:layout_height="100dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/HPFontColorWhite">

        <TextView
            android:id="@+id/paper_size_title"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/paper_size"
            android:gravity="left|bottom"
            android:textSize="15sp"
            android:paddingLeft="45px"
            android:layout_centerVertical="true"/>

        <Spinner
            android:id="@+id/paper_size_spinner"
            android:paddingRight="45dp"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:spinnerMode="dialog"
            android:prompt="@string/paper_size"
            android:layout_alignParentRight="true"
            android:gravity="bottom|right"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/support_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/support_title"
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <TextView
                android:id="@+id/print_preview_support_title"
                android:textColor="@color/HPFontColorGrey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15sp"
                android:paddingBottom="5dp"
                android:text="@string/support"
                android:textSize="18sp"
                android:layout_alignParentBottom="true"
                android:textAllCaps="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/learn_more"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/support_title"
            android:background="@color/HPFontColorWhite">
            <ImageView
                android:id="@+id/learn_more_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="10dp"
                android:src="@drawable/ic_printscreen_print_instructions"/>
            <TextView
                android:id="@+id/ic_printing_support_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="10dp"
                android:text="@string/learn_about_mobile_print"
                android:layout_toEndOf="@id/learn_more_icon"
                android:textColor="@color/HPFontColorBlue"
                android:background="@color/HPFontColorWhite"/>
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>
